# scientific-articles-classifier

./: .pre-commit-config.yaml  README.md  commands.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.dvc/: config
conf/data/: arxiv.yaml
configs/: config.yaml
configs/data/: arxiv.yaml
configs/logging/: mlflow.yaml
configs/model/: cnn.yaml  gru.yaml  transformer.yaml
data/: io.py  preprocess.py
data/processed/: .gitignore  arxiv-ml.parquet.dvc
data/raw/: .gitignore  arxiv-metadata-oai-snapshot.json.gz.dvc
scientific-articles-classifier/: data.py  main.py  pyproject.toml
scientific_articles_classifier/: __init__.py  commands.py  data.py  infer.py  train.py
scientific_articles_classifier/models/: __init__.py  base.py  cnn.py  gru.py  transformer.py
utils/: text_encoder.py
